# critiq

./: .gitignore  README.md  plan.md
client/: .env.example  README.md  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/components/: analyze-form.tsx  task-status.tsx
client/lib/: api-client.ts  utils.ts
server/: .env.example  pyproject.toml  server.py
server/app/: __init__.py  celery_app.py  config.py  main.py  schemas.py
server/app/agents/: __init__.py  base_agent.py  bug_agent.py  coordinator.py  performance_agent.py  security_agent.py  style_agent.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  admin.py  analyze.py
server/app/config/: settings.py
server/app/db/: database.py  models.py
server/app/services/: github_service.py  vector_cache.py
server/app/utils/: logging.py  redis_client.py  task_helpers.py
