[project]
name = "critiq-server"
version = "0.0.1"
description = "Development FastAPI server for critiq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10.0",
    "SQLAlchemy>=1.4.0",
    "asyncpg>=0.27.0",
]
