[project]
name = "critiq-server"
version = "0.0.1"
description = "Development FastAPI server for critiq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10.0",
    "SQLAlchemy>=1.4.0",
    "asyncpg>=0.27.0",
    "structlog>=25.4.0",
    "pydantic-settings>=2.11.0",
    "psycopg2-binary>=2.9.10",
    "celery>=5.5.3",
    "langchain-core>=0.3.78",
    "langchain-anthropic>=0.3.21",
    "pygithub>=2.8.1",
    "redis>=6.4.0",
    "openai>=2.2.0",
    "scikit-learn>=1.7.2",
]
